# fpt-mcp

./: .concepts.yml  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  HANDOFF.md  LICENSE  MODEL_STRATEGY.md  NOTICE.md  README.md  claude_code_settings.json  claude_desktop_config_snippet.json  com.abrahamadsk.fpt-ami.plist  com.abrahamadsk.fpt-mcp.plist  install.sh  maya_result.txt  pyproject.toml  setup_venv.sh
.github/workflows/: ci.yml  graphify-pages.yml  hol-skill-validate.yml
docs/: BUCKET_F_PLAN.md  DEPLOY.md  O3_NEXT_SUGGESTED_ACTIONS.md
scripts/: check_adversarial_count.py  cut-release.sh  invariant_types.py  verify_templates.py
scripts/graphify/: graphify_ast_build.py  graphify_autolabel.py  graphify_relayout.py
src/fpt_mcp/: __init__.py  _session_stats.py  client.py  config.example.json  config.json  editorial.py  error_scrub.py  filters.py  launcher.py  logging_config.py  models.py  paths.py  rag_tools.py  reporting.py  safety.py  server.py  sg_errors.py  shotgrid.py  software_resolver.py  source_resolver.py  suggestions.py  tk_config.py  toolkit_tools.py
src/fpt_mcp/ami/: __init__.py  console.html  handler.py
src/fpt_mcp/docs/: REST_API.md  SG_API.md  TK_API.md
src/fpt_mcp/qt/: __init__.py  app.py  build_app_bundle.py  chat_window.py  claude_worker.py  project_detect.py
src/fpt_mcp/qt/system_prompts/: default.txt  qwen.txt
src/fpt_mcp/rag/: __init__.py  build_index.py  config.py  corpus.json  search.py
src/fpt_mcp/skills/asset-creation/: SKILL.md
src/fpt_mcp/tools/: __init__.py  assets.py  publish.py  sequences.py  shots.py  versions.py
tests/: conftest.py  requirements-test.txt  test_claude_worker_effort.py  test_client_env.py  test_editorial.py  test_error_scrub.py  test_filter_recursion.py  test_filter_validation.py  test_float_coercion.py  test_fpt_launch_app.py  test_golden.py  test_ollama_mac_preflight.py  test_path_containment.py  test_project_detect.py  test_project_env_override.py  test_pydantic_validation.py  test_qt_protocol_url.py  test_rag_search.py  test_reporting.py  test_safety.py  test_server_line_budget.py  test_session_stats.py  test_sg_errors.py  test_sg_operations.py  test_software_resolver.py  test_source_resolver.py  test_suggestion_capture.py  test_suggestions.py  test_system_prompts.py  test_telemetry.py  test_tk_publish.py  test_tool_labels.py  test_toolkit_paths.py  test_trust_gates.py  test_verify_templates.py
tests/fixtures/: __init__.py  templates.yml
tests/golden/: fpt_queries.jsonl
