[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fpt-mcp"
version = "0.1.0"
description = "MCP server for Autodesk Flow Production Tracking (ShotGrid)"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "mcp[cli]>=1.0.0",
    "shotgun-api3>=3.4.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "PySide6>=6.6.0",
    # RAG dependencies
    "chromadb>=0.5.0",
    "sentence-transformers>=2.2.0",
    "rank-bm25>=0.2.2",
]

[project.scripts]
fpt-mcp = "fpt_mcp.server:main"
fpt-ami = "fpt_mcp.ami.handler:main"
fpt-console = "fpt_mcp.qt.app:main"
