[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fpt-mcp"
version = "1.5.2"
description = "MCP server for Autodesk Flow Production Tracking (ShotGrid)"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "mcp[cli]>=1.0.0",
    "shotgun-api3>=3.4.0",
    # Pydantic v3 has breaking changes; pin to v2.x until we audit the
    # ConfigDict / Field / validator surface for v3 compatibility.
    "pydantic>=2.10,<3.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "PySide6>=6.6.0",
    # RAG dependencies — pinned tighter than the rest because the
    # embedding model behavior of BAAI/bge-large-en-v1.5 can drift
    # silently across sentence-transformers minor versions, changing
    # RAG ranking. ChromaDB v2.0 has API breakage.
    "chromadb>=1.5.0,<2.0",
    "sentence-transformers>=5.0,<6.0",
    "rank-bm25>=0.2.2",
]

[project.scripts]
fpt-mcp = "fpt_mcp.server:main"
fpt-ami = "fpt_mcp.ami.handler:main"
fpt-console = "fpt_mcp.qt.app:main"
